Serving on https does not allow mixed content

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,7 @@
     <!-- ******FOOTER****** -->
     <footer class="footer">
         <div class="container text-center">
-            <small class="copyright">Original theme <a href="http://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/">DEVAID</a> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> with adaptations.</small>
+            <small class="copyright">Original theme <a href="https://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/">DEVAID</a> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> with adaptations.</small>
         </div><!--//container-->
     </footer><!--//footer-->
 
