--- a/docs/_includes/docs.html
+++ b/docs/_includes/docs.html
@@ -1,19 +1,19 @@
-    <!-- ******DOCS****** --> 
+    <!-- ******DOCS****** -->
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Get Started</h2>            
+            <h2 class="title text-center">Get Started</h2>
             <div class="block">
                 <h3 class="sub-title text-center">HTML</h3>
-                <p><a href="http://prismjs.com/" target="_blank">PrismJS</a> is used as the syntax highlighter here.</p>
-                <p>Below are the details of the custom PrismJS build used in this template. You can <a href="http://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
+                <p><a href="https://prismjs.com/" target="_blank">PrismJS</a> is used as the syntax highlighter here.</p>
+                <p>Below are the details of the custom PrismJS build used in this template. You can <a href="https://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
                 <ul class="list-unstyled">
                     <li><strong>Compression level:</strong> Minified</li>
                     <li><strong>Theme:</strong> Okaidia</li>
                     <li><strong>Languages:</strong> Markup, CSS, C-like, JavaScript, PHP and Python</li>
                 </ul>
                 <div class="code-block">
-                    <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
+                    <!--//Use Prismjs - https://prismjs.com/index.html#basic-usage -->
                     <pre><code class="language-markup">
     &ltp class="my-style"&gt
       Hello World!
@@ -21,20 +21,20 @@
                      </code></pre>
                 </div><!--//code-block-->
             </div><!--//block-->
-            
+
             <div class="block">
                 <h3 class="sub-title text-center">CSS</h3>
                 <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
-                
+
                 <div class="code-block">
-                    <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
+                    <!--//Use Prismjs - https://prismjs.com/index.html#basic-usage -->
                     <pre>
     <code class="language-css">
-    /*   
+    /*
      * Template Name: devAid - Responsive Website Template for developers
      * Version: 1.0
      * Author: Xiaoying Riley at 3rd Wave Media
-     * Website: http://themes.3rdwavemedia.com/
+     * Website: https://themes.3rdwavemedia.com/
      * Twitter: @3rdwave_themes
     */
     body {
@@ -47,7 +47,7 @@
     </code></pre>
                 </div><!--//code-block-->
             </div><!--//block-->
-            
+
             <div class="block">
                 <h3 class="sub-title text-center">JavaScript</h3>
                 <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit ligula eget dolor.</p>
@@ -60,7 +60,7 @@
     }
                     </code></pre>
                 </div><!--//code-block-->
-            </div><!--//block-->   
+            </div><!--//block-->
             <div class="block">
                 <h3 class="sub-title text-center">Full Documentation</h3>
                 <p>If your documentation is very long you can host the full docs page (including FAQ etc) on GitHub and provide a Call to Action button below to direct users there.</p>
@@ -68,7 +68,7 @@
                     <a class="btn btn-cta-primary" href="https://github.com/twbs/bootstrap" target="_blank">More on GitHub</a>
                 </p>
             </div><!--//block-->
-            
-            </div><!--//docs-inner-->         
+
+            </div><!--//docs-inner-->
         </div><!--//container-->
     </section><!--//docs->
