Trying to fix errors in loading website resources

--- a/docs/_includes/promo.html
+++ b/docs/_includes/promo.html
@@ -9,7 +9,7 @@
             </div-->
             <ul class="meta list-inline">
                 <li><a href="https://minvar.readthedocs.org" target="_blank">More info to come</a></li>
-                <li>Developed at <a href="https://www.imv.uzh.ch" target="_blank">IMV</a> at UniZurich</li>
+                <li>Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a> at UniZurich</li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
