--- a/docs/_includes/docs.html
+++ b/docs/_includes/docs.html
@@ -34,7 +34,7 @@
      * Template Name: devAid - Responsive Website Template for developers
      * Version: 1.0
      * Author: Xiaoying Riley at 3rd Wave Media
-     * Website: https://themes.3rdwavemedia.com/
+     * Website: http://themes.3rdwavemedia.com/
      * Twitter: @3rdwave_themes
     */
     body {
