Webpage now updated and pointing to paper/documentation

--- a/docs/_includes/about.html
+++ b/docs/_includes/about.html
@@ -2,7 +2,11 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">What is MinVar?</h2>
-            <p class="intro text-center">Currently under review.</p>
+            <p class="intro text-center">A command-line tool to discover
+                 drug resistance mutations in HIV-1 populations using deep
+                 sequencing data. See the accompanying
+                 <a href="http://dx.doi.org/10.1016/j.jviromet.2016.11.008">paper</a>.</p>
+
             <div class="row">
 
                 <div class="item col-md-6 col-sm-6 col-xs-12">
@@ -11,7 +15,9 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Designed for clinicians</h3>
-                        <p>More detail here</p>
+                        <p>Only one input file in FASTQ format is required,
+                        no need to set parameters. The final output is a PDF
+                        report with annotated DRM (annotations according to HIVDB).</p>
                     </div><!--//content-->
                 </div><!--//item-->
 
@@ -21,7 +27,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Quick</h3>
-                        <p>More detail here</p>
+                        <p>Run time is negligible compared to the overall experiment.</p>
                     </div><!--//content-->
                 </div><!--//item-->
 
@@ -30,8 +36,11 @@
                         <i class="fa fa-crosshairs"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Sensitive</h3>
-                        <p>More detail here</p>
+                        <h3 class="sub-title">Accurate</h3>
+                        <p>On an extensive set of control experiments, MinVar
+                        reliably called variants down to 5%. In the paper we recommend
+                        and motivate this as an accurate detection threshold.
+                        </p>
                     </div><!--//content-->
                 </div><!--//item-->
 
@@ -43,7 +52,8 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Versatile</h3>
-                        <p>More detail here</p>
+                        <p>MinVar was successfully tested on reads from both
+                        Roche/454 and Illumina MiSeq sequencing platforms.</p>
                     </div><!--//content-->
                 </div><!--//item-->
 
