--- a/docs/_includes/license.html
+++ b/docs/_includes/license.html
@@ -4,7 +4,8 @@
             <div class="license-inner">
             <h2 class="title text-center">License</h2>
                 <div class="info">
-                    <p><strong>Decision pending.</strong></p>
+                    <p><strong>See relevant <a href="http://minvar.readthedocs.io/en/latest/license/">page</a>
+                        on documentation website.</strong></p>
                 </div><!--//info-->
             </div><!--//license-inner-->
         </div><!--//container-->
