--- a/docs/_includes/promo.html
+++ b/docs/_includes/promo.html
@@ -2,13 +2,13 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
             <h2 class="title">Min<span class="highlight">Var</span></h2>
-            <p class="intro">A tool to detect minority variants</p>
+            <p class="intro">A tool to detect minority variants in HIV-1 populations</p>
             <!--div class="btns">
                 <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/" target="_blank">Demo</a>
                 <a class="btn btn-cta-primary" href="https://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/" target="_blank">Download</a>
             </div-->
             <ul class="meta list-inline">
-                <li><a href="https://minvar.readthedocs.org" target="_blank">More info to come</a></li>
+                <li><a href="https://minvar.readthedocs.org" target="_blank">Documentation</a></li>
                 <li>Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a> at UniZurich</li>
             </ul><!--//meta-->
         </div><!--//container-->
