Output files explained, installation instructions needed

--- a/docs/_includes/promo.html
+++ b/docs/_includes/promo.html
@@ -9,7 +9,8 @@
             </div-->
             <ul class="meta list-inline">
                 <li><a href="https://minvar.readthedocs.org" target="_blank">Documentation</a></li>
-                <li>Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a> at UniZurich</li>
+                <li><a href="https://github.com/ozagordi/MinVar" target="_blank">Source code</a></li>
+                <li>Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a>, UniZurich</li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
