Reorganized some text

--- a/docs/_includes/about.html
+++ b/docs/_includes/about.html
@@ -4,8 +4,8 @@
             <h2 class="title text-center">What is MinVar?</h2>
             <p class="intro text-center">A command-line tool to discover
                  drug resistance mutations in HIV-1 populations using deep
-                 sequencing data. See the accompanying
-                 <a href="http://dx.doi.org/10.1016/j.jviromet.2016.11.008">paper</a>.</p>
+                 sequencing data. Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a>, UniZurich.
+            </p>
 
             <div class="row">
 
@@ -23,16 +23,6 @@
 
                 <div class="item col-md-6 col-sm-6 col-xs-12">
                     <div class="icon-holder">
-                        <i class="fa fa-clock-o"></i>
-                    </div>
-                    <div class="content">
-                        <h3 class="sub-title">Quick</h3>
-                        <p>Run time is negligible compared to the overall experiment.</p>
-                    </div><!--//content-->
-                </div><!--//item-->
-
-                <div class="item col-md-6 col-sm-6 col-xs-12">
-                    <div class="icon-holder">
                         <i class="fa fa-crosshairs"></i>
                     </div>
                     <div class="content">
@@ -41,6 +31,16 @@
                         reliably called variants down to 5%. In the paper we recommend
                         and motivate this as an accurate detection threshold.
                         </p>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-md-6 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-clock-o"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title">Quick</h3>
+                        <p>Run time is negligible compared to the overall experiment.</p>
                     </div><!--//content-->
                 </div><!--//item-->
 
