--- a/docs/_includes/promo.html
+++ b/docs/_includes/promo.html
@@ -10,7 +10,7 @@
             <ul class="meta list-inline">
                 <li><a href="https://minvar.readthedocs.org" target="_blank">Documentation</a></li>
                 <li><a href="https://github.com/ozagordi/MinVar" target="_blank">Source code</a></li>
-                <li>Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a>, UniZurich</li>
+                 <li><a href="http://dx.doi.org/10.1016/j.jviromet.2016.11.008">Paper</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
