--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -6,10 +6,10 @@
     </footer><!--//footer-->
 
     <!-- Javascript -->
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/plugins/prism/prism.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/public/js/main.js"></script>
+    <!-- jQuery and popper needed before bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="{{ site.baseurl }}/public/plugins/prism/prism.js"></script>
+    <script src="{{ site.baseurl }}/public/js/main.js"></script>
