--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -16,7 +16,9 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/plugins/bootstrap/css/bootstrap.min.css">
+    <!--link rel="stylesheet" href="{{ site.baseurl }}/public/plugins/bootstrap/css/bootstrap.min.css"-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/public/plugins/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/public/plugins/prism/prism.css">
@@ -27,4 +29,5 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
