--- a/docs/_includes/explain.html
+++ b/docs/_includes/explain.html
@@ -6,7 +6,7 @@
         <div class="row">
 
             <div class="item col-md-8 col-sm-8 col-xs-12">
-                <img src="/public/images/hiv_report_1.png" class="img-fluid" alt="Responsive image">
+                <img src="_includes/explain.html/public/images/hiv_report_1.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
             <div class="item col-md-4 col-sm-4 col-xs-12">
@@ -24,7 +24,7 @@
         <hr/>
         <div class="row">
             <div class="item col-md-8 col-sm-8 col-xs-12">
-                <img src="/public/images/hiv_report_2.png" class="img-fluid" alt="Responsive image">
+                <img src="{{ site.baseurl }}/public/images/hiv_report_2.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
             <div class="item col-md-4 col-sm-4 col-xs-12">
@@ -46,7 +46,7 @@
         <div class="row">
 
             <div class="item col-md-8 col-sm-8 col-xs-12">
-                <img src="/public/images/hcv_report.png" class="img-fluid" alt="Responsive image">
+                <img src="{{ site.baseurl }}/public/images/hcv_report.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
             <div class="item col-md-4 col-sm-4 col-xs-12">
