Scroll works now, more improvements

--- a/docs/_includes/about.html
+++ b/docs/_includes/about.html
@@ -14,7 +14,7 @@
                     <h5 class="card-title">HIV-1</h5>
                     <p class="card-text">The report for HIV-1 includes resistance information to antiviral drugs
                         as predicted by <a href="https://hivdb.stanford.edu">HIVDB</a>.</p>
-                        <a href="report.html#hiv-report" class="btn btn-primary">Explore HIV-1 report</a>
+                        <a href="{{ site.baseurl }}/report.html#hiv-report" class="btn btn-primary">Explore HIV-1 report</a>
 
                     </div>
                 </div>
