--- a/docs/_includes/promo.html
+++ b/docs/_includes/promo.html
@@ -8,9 +8,9 @@
                 <a class="btn btn-cta-primary" href="https://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/" target="_blank">Download</a>
             </div-->
             <ul class="meta list-inline">
-                <li><a href="https://minvar.readthedocs.org" target="_blank">Documentation</a></li>
-                <li><a href="https://github.com/ozagordi/MinVar" target="_blank">Source code</a></li>
-                 <li><a href="http://dx.doi.org/10.1016/j.jviromet.2016.11.008">Paper</a></li>
+                <li class="list-inline-item"><a href="https://minvar.readthedocs.org" target="_blank">Documentation</a></li>
+                <li class="list-inline-item"><a href="https://github.com/ozagordi/MinVar" target="_blank">Source code</a></li>
+                 <li class="list-inline-item"><a href="http://dx.doi.org/10.1016/j.jviromet.2016.11.008">Paper</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
