Add border, some margin

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -21,7 +21,7 @@
                         <li class="nav-item"><a class="nav-link" href="report.html">Report</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link scrollto" data-toggle="collapse" data-target=".navbar-collapse.show" href="report.html#hiv-report">HIV report</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" data-toggle="collapse" data-target=".navbar-collapse.show" href="report.html#hcv_report">HCV report</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" data-toggle="collapse" data-target=".navbar-collapse.show" href="report.html#hcv-report">HCV report</a></li>
                     {% endif %}
                   </ul>
               </div>
