--- a/docs/_includes/explain.html
+++ b/docs/_includes/explain.html
@@ -1,11 +1,11 @@
 <!-- ******REPORT****** -->
-<section id="hiv-report" class="hiv-report section offset-header">
+<section id="hiv-report" class="hiv-report section offset-header" style="margin-bottom: 30px;">
     <div class="container">
         <h2 class="title text-center">HIV report example</h2>
 
         <div class="row">
 
-            <div class="item col-md-8 col-sm-8 col-xs-12">
+            <div class="item border col-md-8 col-sm-8 col-xs-12">
                 <img src="{{ site.baseurl }}/public/images/hiv_report_1.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
@@ -21,9 +21,9 @@
             </div><!--//item-->
 
         </div>
-        <hr/>
+
         <div class="row">
-            <div class="item col-md-8 col-sm-8 col-xs-12">
+            <div class="item border col-md-8 col-sm-8 col-xs-12">
                 <img src="{{ site.baseurl }}/public/images/hiv_report_2.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
@@ -38,14 +38,10 @@
 <section id="hcv-report" class="hcv-report section">
     <div class="container">
         <h2 class="title text-center">HCV report example</h2>
-        <p class="intro text-center">A command-line tool to discover
-            drug resistance mutations in HIV-1 and HCV populations using deep
-            sequencing data. Developed at <a href="http://www.imv.uzh.ch" target="_blank">IMV</a>, UniZurich.
-        </p>
 
         <div class="row">
 
-            <div class="item col-md-8 col-sm-8 col-xs-12">
+            <div class="item border col-md-8 col-sm-8 col-xs-12">
                 <img src="{{ site.baseurl }}/public/images/hcv_report.png" class="img-fluid" alt="Responsive image">
             </div><!--//item-->
 
@@ -55,6 +51,7 @@
                     <dt>2</dt><dd>Contact area is easily customized.</dd>
                     <dt>3</dt><dd>Fraction of reads aligning to the most likely genotype.</dd>
                     <dt>4</dt><dd>Resistance associated substitutions are listed with their frequency.</dd>
+                    <dt>5</dt><dd>Sample name and version are reported in the footer.</dd>
                 </dl>
             </div><!--//item-->
 
